# Advent-of-Code

./: .flake8  .gitignore  .pre-commit-config.yaml  .venv  README.md  pyproject.toml  requirements.txt  setup.py
1/: script.py
10/: script.py
11/: script.py
12/: script.py
13/: script.py
14/: script.py
15/: script.py
16/: script.py
17/: script.py
18/: script.py
19/: script.py
2/: script.py
20/: script.py
2015/: .gitignore  README.md
2015/1/: script.py
2015/11/: script.py
2015/12/: example  script.py
2015/13/: script.py
2015/14/: script.py
2015/16/: script.py
2015/17/: script.py
2015/18/: script.py
2015/19/: script.py
2015/2/: script.py
2015/20/: script.py
2015/21/: script.py
2015/22/: script.py
2015/23/: script.py
2015/24/: script.py
2015/25/: script.py
2015/3/: script.py
2015/4/: script.py
2015/5/: script.py
2015/6/: script.py
2015/7/: script.py
2015/9/: script.py
2019/: .flake8  LICENSE  README.md
2019/1/: script.py
2019/10/: script.py
2019/11/: script.py
2022/: utils-relevant.txt
2023/: .gitignore  README.md
21/: script.py
22/: script.py
23/: script.py
25/: script.py
3/: script.py
4/: script.py
5/: script.py
6/: script.py
7/: script.py
8/: script.py
9/: script.py
GhostyUtils/: aoc.py  diff.py  grid.py  pathfinding.py  vec2.py
tests/: test_diff.py
utils/: .flake8  README.md  pyproject.toml
utils/GhostyUtils/: aoc.py  grid.py  pathfinding.py  vec2.py  vec3.py
utils/GhostyUtils/intcode/: cpu.py
utils/tests/: test_diff.py  test_intcode.py  test_vec2.py
(+63 files in other folders)
